added mobile friendly device-width

--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="title" content="ecommerce">
+		<meta name="description" content="This is a template of an e-commerce store that will be used as a sales tool!">
+		<meta name="keywords" content="ecommerce, stripe, products, template, svelte">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
