--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,7 @@
 		<meta name="language" content="English">
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script src="https://kit.fontawesome.com/dc297d28e0.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
